--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -19,7 +19,7 @@ body {
     font-family: 'Roboto', sans-serif;
  }
 
-#mainSecond {
+#ourSites {
     background: #707071;
 }
 
@@ -27,6 +27,9 @@ body {
     color: #429685;
 }
 
+#greenBorder {
+    border-color: #429685;
+}
 
 /* Animation CSS */
 
